--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "res:start": "rescript build -w"
   },
   "devDependencies": {
+    "@4ait/icons_system": "git+https://github.com/4ait/npm_icons_system.git#semver:^4.1.0",
+    "@4ait/trade_style_palette": "git+https://github.com/4ait/npm_trade_style_palette.git#semver:^1",
     "@4ait/trade_elements": "git+https://github.com/4ait/npm_trade_elements.git#semver:^1.20.3",
     "@4ait/trade_fonts": "git+https://github.com/4ait/npm_trade_fonts.git#semver:^1",
     "@rescript/react": "0.11.0",
