--- a/package.json
+++ b/package.json
@@ -23,16 +23,20 @@
   },
   "devDependencies": {
     "@4ait/icons_system": "git+https://github.com/4ait/npm_icons_system.git#semver:^4.1.0",
-    "@4ait/trade_style_palette": "git+https://github.com/4ait/npm_trade_style_palette.git#semver:^1",
     "@4ait/trade_elements": "git+https://github.com/4ait/npm_trade_elements.git#semver:^1.20.3",
     "@4ait/trade_fonts": "git+https://github.com/4ait/npm_trade_fonts.git#semver:^1",
+    "@4ait/trade_style_palette": "git+https://github.com/4ait/npm_trade_style_palette.git#semver:^1",
     "@rescript/react": "0.11.0",
     "autoprefixer": "10.4.15",
-    "cssnano": "6.0.1",
+    "css-loader": "^6.8.1",
+    "cssnano": "^6.0.1",
     "gentype": "4.5.0",
     "next-transpile-modules": "10.0.1",
     "postcss": "8.4.28",
     "postcss-cli": "10.1.0",
-    "rescript": "10.1.4"
+    "postcss-loader": "^7.3.3",
+    "rescript": "10.1.4",
+    "sass-loader": "^13.3.2",
+    "style-loader": "^3.3.3"
   }
 }
