--- a/bsconfig.json
+++ b/bsconfig.json
@@ -2,7 +2,7 @@
   "name": "rescript-nextjs-template",
   "namespace": false,
   "jsx": { "version": 4, "mode": "classic" },
-  "bs-dependencies": ["@rescript/react", "rescript-classnames"],
+  "bs-dependencies": ["@rescript/react", "rescript-classnames", "rescript-webapi"],
   "ppx-flags": [],
   "sources": [
     { "dir": "src", "subdirs": true }
