--- a/package.json
+++ b/package.json
@@ -3,13 +3,6 @@
   "version": "1.0.0",
   "author": "demonized-4A",
   "private": true,
-  "dependencies": {
-    "next": "13.4.16",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "rescript-classnames": "^6.0.0",
-    "sass": "^1.65.1"
-  },
   "scripts": {
     "dev": "next",
     "debug": "NODE_OPTIONS='--inspect' next",
@@ -20,6 +13,13 @@
     "res:build": "rescript",
     "res:clean": "rescript clean",
     "res:start": "rescript build -w"
+  },
+  "dependencies": {
+    "next": "13.4.16",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "rescript-classnames": "^6.0.0",
+    "sass": "^1.65.1"
   },
   "devDependencies": {
     "@4ait/icons_system": "git+https://github.com/4ait/npm_icons_system.git#semver:^4.1.0",
@@ -36,6 +36,7 @@
     "postcss-cli": "10.1.0",
     "postcss-loader": "^7.3.3",
     "rescript": "10.1.4",
+    "rescript-webapi": "^0.8.0",
     "sass-loader": "^13.3.2",
     "style-loader": "^3.3.3"
   }
